--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -8,34 +8,10 @@
 # all options are neccesarily listed as examples here, see source
 # or source-generated docs for more info.   
 default:
-  display_name: NYU Libraries
-  login:
+  auth:
     link_code: NYU
   views:
     dir: nyu
-    breadcrumbs:
-      title: NYU Libraries
-      url: http://library.nyu.edu
-    tabs:
-      all:
-        display: 'Books & More'
-        url: http://bobcatdev.library.nyu.edu
-        tip: 'Books & e-books, journals & e-journals, scripts, scores, archival materials, NYU dissertations, videos, sound recordings'
-      remote:
-        display: 'Articles & Databases'
-        url: https://webdev1.library.nyu.edu/arch
-        tip: by Subject and Content Type
-      databases:
-        display: Databases A-Z
-        url: https://webdev1.library.nyu.edu/arch/databases/alphabetical/
-        tip: All databases by title
-      journals:
-        display: E-Journals A-Z
-        tip: Find e-journals by title or locate a known article
-      reserves:
-        display: Course Reserves
-        url: 'http://bobcatdev.library.nyu.edu/primo_library/libweb/action/search.do?mode=Basic&amp;vid=NYU&amp;tab=reserves'
-        tip: 'Search by instructor, course name, course title, etc.'
     sfx_base_url: http://sfx.library.nyu.edu/sfxlcl41?
   services:
     # Priority 2
@@ -254,7 +230,9 @@ default:
       priority: 6
 
 NYU:
-  parent_institution: default
+  name: NYU Libraries
+  parent_code: default
+  active_tab: journals
   ip_addresses:
     - 128.122.0.0-128.122.149.239
     - 172.26.*.*
@@ -279,33 +257,10 @@ NYU:
         COMMENTS_ABOUT_BOBCAT_LCL: help
 
 NYUAD:
-  display_name: NYU Abu Dhabi Library
-  parent_institution: NYU 
+  name: NYU Abu Dhabi Library
+  parent_code: NYU 
   views:
     dir: nyuad
-    breadcrumbs:
-      title: NYUAD Library
-      url: http://nyuad.nyu.edu/academics/library/index.html
-    tabs:
-      all:
-        display: 'Books & More'
-        url: http://bobcatdev.library.nyu.edu/nyuad
-        tip: 'Books, E-Books, Journal Titles, Audio, Video & More'
-      remote:
-        display: Articles
-        url: https://webdev1.library.nyu.edu/arch/nyuad
-        tip: Sorted by Subject and Content Type
-      databases:
-        display: Databases A-Z
-        url: https://webdev1.library.nyu.edu/arch/nyuad/databases/alphabetical/
-        tip: All Databases by Title
-      journals:
-        display: Journals A-Z
-        tip: Find E-journals by Title or Locate a Known Article
-      reserves:
-        display: Course Reserves
-        url: 'http://bobcatdev.library.nyu.edu/primo_library/libweb/action/search.do?mode=Basic&vid=NYUAD&tab=nyuadcr'
-        tip: 'Search by Course or Professor'
     sfx_base_url: http://sfx.library.nyu.edu/sfxlcl41?
   ip_addresses:
     - 192.168.224.0/23
@@ -335,30 +290,12 @@ NYUAD:
     - 172.29.118.0/23
 
 CU:
-  display_name: The Cooper Union Library
-  login:
+  name: The Cooper Union Library
+  active_tab: journals
+  auth:
     link_code: CU
   views:
     dir: cu
-    breadcrumbs:
-      title: Cooper Union Library
-      url: http://library.cooper.edu
-    tabs:
-      all:
-        display: Consortium Catalog
-        url: http://bobcatdev.library.nyu.edu/cooper
-        tip: 'Books & e-books, journals & e-journals, scripts, scores, archival materials, videos, sound recordings, and other materials in the Consortium libraries'
-      cu:
-        display: Cooper Library Catalog
-        url: "http://bobcatdev.library.nyu.edu/primo_library/libweb/action/search.do?mode=Basic&vid=CU&tab=cu"
-        tip: 'Books & e-books, journals & e-journals, videos, and other materials in the Cooper Union Library'
-      journals:
-        display: E-Journals
-        tip: Browse e-journals by title or search for a specific article
-      reserves:
-        display: Course Reserves
-        url: 'http://bobcatdev.library.nyu.edu/primo_library/libweb/action/search.do?mode=Basic&amp;vid=CU&amp;tab=cucr'
-        tip: 'Search course reserves by instructor, course name or number, author, title, and other terms'
     sfx_base_url: http://sfx.library.nyu.edu/sfxcooper?
   controllers:
     searcher: SearchMethods::Sfx4Solr::CU
@@ -379,38 +316,12 @@ CU:
           CAPTURE_CITATION: export_citation
 
 NS:
-  display_name: New School Libraries
-  login:
+  name: New School Libraries
+  active_tab: journals
+  auth:
     link_code: NS
   views:
     dir: ns
-    breadcrumbs:
-      title: New School Libraries
-      url: http://library.newschool.edu
-    tabs:
-      all:
-        display: Find resources in All Consortium Libraries
-        url: http://bobcatdev.library.nyu.edu/newschool
-        tip: Find resources in All Consortium Libraries
-      ns:
-        display: New School Resources
-        url: "http://bobcatdev.library.nyu.edu/primo_library/libweb/action/search.do?mode=Basic&vid=NS&tab=ns"
-        tip: Find New School Resources
-      remote:
-        display: Articles and Databases
-        url: https://webdev1.library.nyu.edu/arch/ns
-        tip: 'Search for articles, images and media by subject'
-      databases:
-        display: Databases A-Z
-        url: https://webdev1.library.nyu.edu/arch/ns/databases/alphabetical/
-        tip: All databases by title
-      journals:
-        display: Journals A-Z
-        tip: Locate journals by title or citation
-      reserves:
-        display: Course Reserves
-        url: 'http://bobcatdev.library.nyu.edu/primo_library/libweb/action/search.do?mode=Basic&amp;vid=NS&amp;tab=nscr'
-        tip: 'Search for Reserves by title or instructor name'
     sfx_base_url: http://sfx4.library.newschool.edu/ns?
   controllers:
     searcher: SearchMethods::Sfx4Solr::NS
@@ -439,7 +350,7 @@ NS:
         COMMENTS_ABOUT_BOBCAT_LCL: help
 
 NYSID:
-  login:
+  auth:
     link_code: NYSID
   display_name: New York School of Interior Design Library
   ip_addresses:
