--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -295,6 +295,14 @@ NYU:
       priority: 4
       service_types:
           - export_citation
+    NYU_BIBTEX:
+      name: To Easy Bib
+      type: OpenURLService
+      base_url: http://webdev2.bobst.nyu.edu:8080/citation/cite?format=easybib&
+      display_text: To Easy Bib
+      priority: 4
+      service_types:
+          - export_citation
 NYUAD:
   name: NYU Abu Dhabi Library
   parent_code: NYU 
