--- a/test/fixtures/referents.yml
+++ b/test/fixtures/referents.yml
@@ -157,3 +157,6 @@ sfx_owner_but_fulltext_empty_referent:
 sfx_multi_obj_request_no_fulltext_referent:
   title: "Mobile Information Systems"
 
+the_new_yorker_referent:
+  title: The New Yorker
+  issn: 0028-792X
