--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -385,7 +385,7 @@ CU:
         umlaut: 
           url_suffix: "/cu"
   controllers:
-    searcher: SearchMethods::Sfx4Solr::CU
+    searcher: Sfx4Solr::Cu
   ip_addresses:
     - 199.98.16.0-199.98.31.255 
   services:
@@ -416,7 +416,7 @@ NS:
         umlaut: 
           url_suffix: "/ns"
   controllers:
-    searcher: SearchMethods::Sfx4Solr::NS
+    searcher: Sfx4Solr::Ns
   ip_addresses:
     - 149.31.0.0-149.31.255.255
     - 69.64.210.46
