--- a/test/fixtures/referents.yml
+++ b/test/fixtures/referents.yml
@@ -1,17 +1,17 @@
 # Referent fixtures
 frankenstein: 
   isbn: "9780393964585"
-  atitle: ""
   title: "frankenstein : the 1818 text, contexts, nineteenth-century responses, modern criticism"
-  id: 1
-  issn: ""
   year: "1997"
-  volume: ""
-  created_at: 2008-06-28 16:15:27 -04:00
-  
-simple_request_referent:
-  issn: "0098-7484"
-  
+
+primo_book_virtual_inequality:
+  title: "Virtual inequality : beyond the digital divide"
+  isbn: "0878409998"
+
+primo_journal_musical_quarterly:
+  title: The Musical quarterly
+  isbn: "0027-4631"
+
 cu_ip_referent:
   issn: "0098-7484"
 
